--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sagittis sit amet lorem gravida porttitor. Nam ullamcorper ex sed lectus lacinia lacinia. 
                         In tempus, purus bibendum rhoncus accumsan, nisi ante pulvinar ligula, in ultricies arcu lacus at massa. Integer in metus vel erat aliquet ullamcorper eu ut dolor.</p>
                     <div class="btn-container">
-                        <button class="btn-1">GitHub</button>
+                        <a href="https://github.com/arthurnorat/tipsy">
+                            <button class="btn-1">GitHub</button>
+                        </a>
                         <button class="btn-2">Live Demo</button>
                     </div>    
                 </div>
