--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- HERO SECTION TODO: ADD BUTTONS E SOCIAL MEDIA -->
     
-    <section id="hero">            
+    <section id="hero">
         <div class="hero-text">
             <p class="p1">Olá, eu sou o</p>
             <h1 class="title">Arthur</h1>
@@ -40,14 +40,14 @@
                 <button class="btn-2">Contato</button>
             </div>
             <div id="socials-container">
-                <a href="https://www.linkedin.com/in/arthurnorat/">
+                <a href="https://www.linkedin.com/in/arthurnorat/" target="_blank" rel="noopener noreferrer">
                     <img
                         src="./assets/linkedin.png"
                         alt="My LinkedIn Profile"
                         class="icon">
-                </a>        
-                <a href="https://github.com/arthurnorat">    
-                    <img 
+                </a>
+                <a href="https://github.com/arthurnorat" target="_blank" rel="noopener noreferrer">
+                    <img
                         src="./assets/github.png"
                         alt="My Github Profile"
                         class="icon">
@@ -56,8 +56,8 @@
         </div>
         <div class="pic-container">
             <img src="./assets/headshot.png" alt="Arthur Norat Profile Picture">
-        </div>        
-    </section>    
+        </div>
+    </section>
 
 <!-- PROJECTS -->
     
