--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="logo">Arthur Norat</div>
         <div>
             <ul class="nav-links">
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#">About me</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#">Experience</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Open Source</a></li>
             </ul>
         </div>        
     </nav>
@@ -168,5 +168,3 @@
 
 </body>
 </html>
-
-
