add experience section

--- a/index.html
+++ b/index.html
@@ -121,10 +121,18 @@
         <h1 class="section_title">Experience</h1>
         <div class="experience-container">
             <div class="experience-item">
-                <h3>Desenvolvedor Frontend</h3>
-                <p>Trabalhei em vários projetos utilizando HTML, CSS e JavaScript para criar interfaces de usuário responsivas e acessíveis.</p>
+                <div class="pic-container">
+                    <img src="./assets/experience_1.png" alt="Experience 1">
+                </div>
+                <div class="experience-text">
+                    <h3>VideoLAN</h3>
+                    <p>Trabalhei em vários projetos utilizando HTML, CSS e JavaScript para criar interfaces de usuário responsivas e acessíveis.</p>
+                </div>
+                <div class="experience-pic">
+                    <img src="./assets/experience_1.png" alt="Experience 1">
+                </div>
             </div>
-            <div class="open-source-item">
+            <div class="experience-item">
                 <h3>Desenvolvedor Backend</h3>
                 <p>Atuei no desenvolvimento de APIs RESTful com Node.js e Express, integrando bancos de dados como MongoDB e PostgreSQL.</p>
             </div>
