add vlc for ios in experience section

--- a/index.html
+++ b/index.html
@@ -122,23 +122,12 @@
         <div class="experience-container">
             <div class="experience-item">
                 <div class="pic-container">
-                    <img src="./assets/experience_1.png" alt="Experience 1">
+                    <img src="./assets/vlc.png" alt="VideoLAN">
                 </div>
                 <div class="experience-text">
-                    <h3>VideoLAN</h3>
-                    <p>Trabalhei em vários projetos utilizando HTML, CSS e JavaScript para criar interfaces de usuário responsivas e acessíveis.</p>
+                    <h3>GSoC 2025, VideoLAN</h3>                    
+                    <p>I'm working on the VLC iOS app, a video player for iOS devices.</p>
                 </div>
-                <div class="experience-pic">
-                    <img src="./assets/experience_1.png" alt="Experience 1">
-                </div>
-            </div>
-            <div class="experience-item">
-                <h3>Desenvolvedor Backend</h3>
-                <p>Atuei no desenvolvimento de APIs RESTful com Node.js e Express, integrando bancos de dados como MongoDB e PostgreSQL.</p>
-            </div>
-            <div class="experience-item">
-                <h3>Contribuidor Open Source</h3>
-                <p>Participei de projetos open source como <a href="https://github.com/arthurnorat/tipsy" target="_blank">Tipsy</a> e outras iniciativas na comunidade, colaborando com código, revisão de pull requests e documentação.</p>
             </div>
         </div>
     </section>
