--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                 <div class="experience-text">
                     <h3>GSoC 2025, VideoLAN</h3>                    
                     <p>I'm working on the VLC iOS app, a video player for iOS devices.</p>
+                    <div class="btn-container">
+                        <a href="gsoc2025.html">
+                            <button class="btn-1">Details</button>
+                        </a>
+                        <a href="https://code.videolan.org/videolan/vlc-ios/-/merge_requests/1457" target="_blank" rel="noopener noreferrer">
+                            <button class="btn-2">View Code</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
