--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="logo">Arthur Norat</div>
         <div>
             <ul class="nav-links">
-                <li><a href="#">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#">Experience</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#about">About me</a></li>
                 <li class="lang-switcher">
                     <a href="./" class="lang-btn active" aria-label="English (US)" title="English (US)">🇺🇸</a>
                     <a href="./pt-br/" class="lang-btn" aria-label="Português (Brasil)" title="Português (Brasil)">🇧🇷</a>
@@ -141,6 +141,21 @@
                         </a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+<!-- ABOUT ME -->
+
+    <section id="about">
+        <div class="about-container">
+            <div class="about-image">
+                <img src="./assets/headshot.png" alt="Arthur Norat">
+            </div>
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
             </div>
         </div>
     </section>
