--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -19,9 +19,9 @@
         <div class="logo">Arthur Norat</div>
         <div>
             <ul class="nav-links">
-                <li><a href="#">Sobre mim</a></li>
                 <li><a href="#projects">Projetos</a></li>
-                <li><a href="#">Experiência</a></li>
+                <li><a href="#experience">Experiência</a></li>
+                <li><a href="#about">Sobre mim</a></li>
                 <li class="lang-switcher">
                     <a href="../" class="lang-btn" aria-label="English (US)" title="English (US)">🇺🇸</a>
                     <a href="./" class="lang-btn active" aria-label="Português (Brasil)" title="Português (Brasil)">🇧🇷</a>
@@ -37,7 +37,7 @@
         <div class="hero-text">
             <p class="p1">Olá, eu sou o</p>
             <h1 class="title">Arthur</h1>
-            <p class="p2">iOS and Web Developer</p>
+            <p class="p2">Desenvolvedor Web e iOS</p>
             <div class="btn-container">
                 <button class="btn-1">Currículo</button>
                 <button class="btn-2">Contato</button>
@@ -140,6 +140,21 @@
                         </a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+<!-- ABOUT ME -->
+
+    <section id="about">
+        <div class="about-container">
+            <div class="about-image">
+                <img src="../assets/headshot.png" alt="Arthur Norat">
+            </div>
+            <div class="about-text">
+                <h2>Sobre Mim</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
             </div>
         </div>
     </section>
