--- a/gsoc2025.html
+++ b/gsoc2025.html
@@ -44,7 +44,7 @@
                         </span>
                         <span class="meta-item">
                             <i class='bx bx-code-alt'></i>
-                            Swift, iOS, VLC
+                            Swift, Objective-C, iOS
                         </span>
                         <span class="meta-item">
                             <i class='bx bx-git-branch'></i>
@@ -65,21 +65,13 @@
 <!-- PROJECT LINKS -->
     
     <section id="project-links">
-        <div class="links-container">
-            <div class="links-content">
-                <a href="https://code.videolan.org/videolan/vlc-ios/-/merge_requests/1457" target="_blank" rel="noopener noreferrer" class="project-link">
-                    <i class='bx bx-git-branch'></i>
-                    View on GitLab
-                </a>
-                <a href="https://summerofcode.withgoogle.com/projects/#4969006760486912" target="_blank" rel="noopener noreferrer" class="project-link">
-                    <i class='bx bx-link-external'></i>
-                    GSoC Project Page
-                </a>
-                <a href="https://www.videolan.org/" target="_blank" rel="noopener noreferrer" class="project-link">
-                    <i class='bx bx-world'></i>
-                    VideoLAN Website
-                </a>
-            </div>
+        <div class="btn-container">
+            <a href="https://code.videolan.org/videolan/vlc-ios/-/merge_requests/1457" target="_blank" rel="noopener noreferrer">
+                <button class="btn-1">View on GitLab</button>
+            </a>
+            <a href="https://summerofcode.withgoogle.com/programs/2025/projects/LQHsm73T" target="_blank" rel="noopener noreferrer">
+                <button class="btn-2">GSoC Project Page</button>
+            </a>
         </div>
     </section>
 
