--- a/es/index.html
+++ b/es/index.html
@@ -131,7 +131,7 @@
                     <p>Estoy trabajando en la aplicación VLC iOS, un reproductor de video para dispositivos iOS.</p>
                     <div class="btn-container">
                         <a href="../es/gsoc2025.html">
-                            <button class="btn-1">Detalles</button>
+                            <button class="btn-1">Evaluación Final</button>
                         </a>
                         <a href="https://code.videolan.org/videolan/vlc-ios/-/merge_requests/1457" target="_blank" rel="noopener noreferrer">
                             <button class="btn-2">Ver Código</button>
