--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -131,7 +131,7 @@
                     <p>Estou trabalhando no aplicativo VLC iOS, um player de vídeo para dispositivos iOS.</p>
                     <div class="btn-container">
                         <a href="../pt-br/gsoc2025.html">
-                            <button class="btn-1">Detalhes</button>
+                            <button class="btn-1">Avaliação Final</button>
                         </a>
                         <a href="https://code.videolan.org/videolan/vlc-ios/-/merge_requests/1457" target="_blank" rel="noopener noreferrer">
                             <button class="btn-2">Ver Código</button>
